add -XX:MaxPermSize=256m
git-svn-id: http://talendforge.org/svn/mdm/trunk@30101 f6f1c999-d317-4740-80b0-e6d1abc6f99e